// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Convert direcotry to tree > 1. should render correctly with Group_by_dir + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "fullLabel": "ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/src/images",
                    "fileType": "png",
                    "name": "blender.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "dir",
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 2. should render correctly with Group_by_dir + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "fullLabel": "ui-framework/src/images",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/src/images",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 3. should render correctly with Group_by_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 4. should render correctly with Group_by_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 5. should render correctly with Group_by_dir_and_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "png",
              },
              {
                "children": [
                  {
                    "children": [],
                    "fullLabel": "png",
                    "label": "png",
                    "renderCondition": {
                      "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                      "type": "png",
                      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "renderList": [
                      {
                        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                        "dirPath": "ui-framework/src/images",
                        "fileType": "png",
                        "name": "blender.png",
                        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                        "workspaceFolder": "src",
                      },
                    ],
                    "type": "type",
                    "value": "png",
                  },
                ],
                "fullLabel": "ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "type": "",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "dir",
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/webview",
                    "fileType": "png",
                    "name": "d3.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 6. should render correctly with Group_by_dir_and_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/src/images",
                    "fileType": "png",
                    "name": "blender.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
            ],
            "fullLabel": "ui-framework/src/images",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/webview",
                    "fileType": "png",
                    "name": "d3.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 7. should render correctly with Group_by_none + Nested 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree > 8. should render correctly with Group_by_none + Compact 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;
